--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,20 @@
 <resources>
-    <string name="app_name">Bell App 5</string>
+    <string name="app_name">Bell</string>
     <string name="title_sign_in_screen">Sign In</string>
     <string name="sign_in_button">Sign In</string>
     <string name="username_label">Username</string>
     <string name="password_label">Password</string>
     <string name="select_title">Select</string>
     <string name="back_button">Back Button</string>
-    <string name="selector">\" \"</string>
+    <string name="selector"></string>
     <string name="summary">Summary</string>
+    <string name="breakfast">Breakfast</string>
+    <string name="lunch">Lunch</string>
+    <string name="dinner">Dinner</string>
+    <string name="quantity">Quantity</string>
+    <string name="order_details">Quantity: %1$s \n
+        Total: %4$s \n\n Thank you!</string>
+    <string name="subtotal_price">Subtotal %s</string>
+    <string name="home">Home</string>
 
 </resources>
